# todaynote

./: package-lock.json  package.json  vite.config.js
docs/: adding_keyboard_shortcuts.md  adding_rememberable_settings.md  shortcut-system.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: folder.rs  i18n.rs  mod.rs  notes.rs  search.rs  settings.rs  setup.rs  tags.rs  theme.rs
src-tauri/src/models/: app_state.rs  config.rs  note_session.rs  response_types.rs
src-tauri/src/services/: mod.rs  note_manager.rs  search.rs  statistics.rs  tag_manager.rs
src-tauri/src/utils/: app_data.rs  date.rs  markdown.rs  mod.rs  tag_parser.rs  text.rs  window.rs
src-tauri/themes/: blind-spot.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  cerulean.json  dark.json  dracula.json  green-apple.json  jonquil.json  light.json  nord.json  pumpkin.json  void-heart.json
src-tauri/translations/: de.json  en.json  ja.json  jp.json
src/assets/app-icon/: attribution.txt
src/lib/: index.ts
src/lib/actions/: focusTrap.ts  lang.ts
src/lib/components/: AboutSelector.svelte  AboutView.svelte  DateFormatStyleSelector.svelte  DefaultThreadNameSelector.svelte  EditorView.svelte  FindInNote.svelte  FindInView.svelte  FloatingToolbar.svelte  FolderSelector.svelte  IdentIcon.svelte  IdentIconStyleSelector.svelte  IdentIcon_dotmatrix.svelte  IdentIcon_round.svelte  Identicon_round.svelte  KeyboardShortcut.svelte  LanguageSelector.svelte  LayoutToggle.svelte  LayoutToolbar.svelte  ListLayout.svelte  MainView.svelte  MasonryLayout.svelte  MilkdownEditor.svelte  Modal.svelte  ModalFooter.svelte  Navigation.svelte  NoteBrowser.svelte  NoteControlCenter.svelte  NoteDate.svelte  NoteDisplay.svelte  NoteEditor.svelte  NoteEditorLayout.svelte  NoteFormatter.svelte  NoteLine.svelte  NoteSearchResults.svelte  NoteSectionShortcuts.svelte  NoteTags.svelte  (+30 more)
src/routes/: +page.svelte
(+38 files in other folders)
